[BTWCT-1029] - fixed visibility/opacity from previous merge

--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -77,6 +77,7 @@ nav.cmp-navigation {
          &.is-expanded > .cmp-navigation__item.is-active > .cmp-navigation__group {
             visibility: visible;
             display: block;
+            opacity: 1;
          }
 
          &.is-expanded > .cmp-navigation__item.is-active{
@@ -233,8 +234,8 @@ nav.cmp-navigation {
          & > .cmp-navigation__group {
             white-space: initial;
             z-index: 99;
-            visibility: hidden;
             opacity: 0;
+            visibility: hidden;
             list-style: none;
             padding: $space-l $space-xl  $space-xl $space-xl;
             background-color: $color-white;
